# University_Students_Database

./: CMakeLists.txt  README.md
resources/: example.db  login.password
src/: AdminClient.cpp  AdminClient.h  Database.cpp  Database.h  Display.cpp  Display.h  Student.cpp  Student.h  UserClient.cpp  UserClient.h  main.cpp  test.cpp
